--- a/controller/templates/index.html
+++ b/controller/templates/index.html
@@ -35,6 +35,7 @@
     <script src="{{ url_for('static', filename='node_modules/jquery/dist/jquery.min.js')}}"></script>
 
     <script src="{{ url_for('static', filename='node_modules/Leaflet.fullscreen/dist/Leaflet.fullscreen.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='node_modules/leaflet.motion/dist/leaflet.motion.min.js')}}"></script>
 
     <script src="{{ url_for('static', filename='js/card_map_handler.js')}}"></script>
     <script src="{{ url_for('static', filename='js/map_utils.js')}}"></script>
