--- a/controller/templates/travel_header_buttons.html
+++ b/controller/templates/travel_header_buttons.html
@@ -1,33 +1,55 @@
 
 {% block content %}
 {% if context == True %}
-<button id="delete_travel" type="button"  onclick="window.location.href='{{ url_for('travel.delete_stop', stop_id=stop.id) }}'" data-bs-toggle="tooltip" data-bs-placement="left" title="Delete stop" class="btn btn-danger btn-fab">
-    <i class="bi bi-trash lg-icon-fab"> </i>
-  </button>
 
-  <button href="#" type="button" class="btn btn-warning btn-fab" data-bs-toggle="modal" data-bs-target="#downloadWanderpisModal" id="download_all_wanderpis_context">
-    <i class="bi bi-file-earmark-arrow-down lg-icon-fab"></i>
-  </button>
-  <button href="#" type="button" class="btn btn-success btn-fab" data-bs-toggle="modal" data-bs-target="#uploadFileModal" id="upload_files">
-    <i class="bi bi-file-earmark-arrow-up lg-icon-fab"></i>
-  </button>
-  <button onclick="window.location.href='{{ url_for('home.record', stop_id=stop.id) }}'" type="button" class="btn btn-info btn-fab" data-bs-toggle="tooltip" data-bs-placement="left" title="New Wanderpi" id="new_wanderpi">
-    <i class="bi bi-plus-lg lg-icon-fab"></i>
-  </button>
+<button id="slide_view" type="button"  onclick="window.location.href='{{ url_for('home.slide_view', stop_id=stop.id) }}'" data-bs-toggle="tooltip" data-bs-placement="left" title="Slide view" class="btn btn-info btn-fab me-3">
+  <i class="bi bi-file-slides lg-icon-fab"> </i>
+</button>
+
+<button  type="button" onclick="window.location.href='{{ url_for('home.global_map', id=travel.id, page=1) }}'" class="btn btn-info btn-fab mx-3" data-bs-toggle="tooltip" data-bs-placement="left" title="Global Trip Map" id="global_map">
+  <i class="bi bi-map lg-icon-fab"></i>
+</button>
+
+<button href="#" type="button" class="btn btn-warning btn-fab" data-bs-toggle="modal" data-bs-target="#downloadWanderpisModal" id="download_all_wanderpis_context">
+  <i class="bi bi-file-earmark-arrow-down lg-icon-fab"></i>
+</button>
+
+<button href="#" type="button" class="btn btn-success btn-fab" data-bs-toggle="modal" data-bs-target="#uploadFileModal" id="upload_files">
+  <i class="bi bi-file-earmark-arrow-up lg-icon-fab"></i>
+</button>
+
+<button onclick="window.location.href='{{ url_for('home.record', stop_id=stop.id) }}'" type="button" class="btn btn-info btn-fab" data-bs-toggle="tooltip" data-bs-placement="left" title="New Wanderpi" id="new_wanderpi">
+  <i class="bi bi-plus-lg lg-icon-fab"></i>
+</button>
+
+<button id="delete_travel" type="button"  onclick="window.location.href='{{ url_for('travel.delete_stop', stop_id=stop.id) }}'" data-bs-toggle="tooltip" data-bs-placement="left" title="Delete stop" class="btn btn-danger btn-fab">
+  <i class="bi bi-trash lg-icon-fab"> </i>
+</button>
+
 {% else %}
 
-<button id="delete_travel" type="button"  onclick="window.location.href='{{ url_for('travel.delete_stop', stop_id=stop.id) }}'" data-bs-toggle="tooltip" data-bs-placement="left" title="Delete stop" class="btn btn-danger btn-fab me-3">
-    <i class="bi bi-trash"> </i>
+<button id="slide_view" type="button"  onclick="window.location.href='{{ url_for('home.slide_view', stop_id=stop.id) }}'" data-bs-toggle="tooltip" data-bs-placement="left" title="Slide view" class="btn btn-info btn-fab me-3">
+  <i class="bi bi-file-slides"> </i>
+</button>
+
+<button  type="button" onclick="window.location.href='{{ url_for('home.global_map', id=travel.id, page=1) }}'" class="btn btn-info btn-fab mx-3" data-bs-toggle="tooltip" data-bs-placement="left" title="Global Trip Map" id="global_map">
+  <i class="bi bi-map"></i>
 </button>
 
 <button href="#" type="button" class="btn btn-warning btn-fab me-3" data-bs-toggle="modal" data-bs-target="#downloadWanderpisModal"  id="download_all_wanderpis_context">
     <i class="bi bi-file-earmark-arrow-down"></i>
 </button>
+
 <button href="#" type="button" class="btn btn-success btn-fab me-3" data-bs-toggle="modal" data-bs-target="#uploadFileModal"  id="upload_files">
     <i class="bi bi-file-earmark-arrow-up"></i>
 </button>
+
 <button onclick="window.location.href='{{ url_for('home.record', stop_id=stop.id) }}'" type="button" class="btn btn-info btn-fab me-3" data-bs-toggle="tooltip" data-bs-placement="left" title="New Wanderpi" id="new_wanderpi">
     <i class="bi bi-plus-lg"></i>
+</button>
+
+<button id="delete_travel" type="button"  onclick="window.location.href='{{ url_for('travel.delete_stop', stop_id=stop.id) }}'" data-bs-toggle="tooltip" data-bs-placement="left" title="Delete stop" class="btn btn-danger btn-fab me-3">
+  <i class="bi bi-trash"> </i>
 </button>
 
 {% endif %}
