--- a/controller/templates/travel_card.html
+++ b/controller/templates/travel_card.html
@@ -29,11 +29,13 @@
             </div>
 
             <script>
+                console.log("{{ travel.get_all_wanderpis()|length }}");
+
                 {% if travel.get_all_wanderpis()|length > 0 %}  
-                {% for video in travel.get_all_wanderpis() %}
-                    loadDistanceListFromWanderpis("{{ video.lat }}", "{{ video.long }}", "{{ travel.id }}");
-                {% endfor %}
-                getDistanceByTravelId("{{ travel.id }}");
+                    {% for video in travel.get_all_wanderpis() %}
+                        loadDistanceListFromWanderpis("{{ video.lat }}", "{{ video.long }}", "{{ travel.id }}");
+                    {% endfor %}
+                    getDistanceByTravelId("{{ travel.id }}");
                 {% endif  %}
                 
             </script>
@@ -49,10 +51,11 @@
             <button id="delete_travel" type="button"  onclick="window.location.href='/delete_travel/{{ travel.id }}'" class="btn btn-outline-danger btn-block btn-responsive"><i class="bi bi-trash"></i></button>
                 
             <script>
+                initializeMap("{{ travel.id }}")
                 {% for stop in travel.get_all_stops() %}
-                    initializeStopsList("{{ stop.lat }}", "{{ stop.long}}");
+                    initializeStopsList("{{ stop.lat }}", "{{ stop.long}}", "{{ stop.address }}");
                 {% endfor %}
-                initializeMapAndLocator("{{ travel.id }}","{{ travel.destination }}",);
+                initializeMapAndLocator("{{ travel.lat }}","{{ travel.long }}",);
             </script>
 
         </div>
