--- a/controller/templates/stops_view.html
+++ b/controller/templates/stops_view.html
@@ -32,6 +32,7 @@
     <script src="{{ url_for('static', filename='node_modules/jquery/dist/jquery.min.js')}}"></script>
     
     <script src="{{ url_for('static', filename='js/page_utils.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/map_utils.js')}}"></script>
 
     <!--Import SocketIO-->
     <script src="{{ url_for('static', filename='node_modules/socket.io/client-dist/socket.io.js')}}"></script>
